--- a/app/src/main/res/layout/activity_continent_selection.xml
+++ b/app/src/main/res/layout/activity_continent_selection.xml
@@ -24,7 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Continent Name"
+            android:text="대륙이름"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:gravity="center" />
